--- a/index.html
+++ b/index.html
@@ -46,15 +46,14 @@
       cursor: pointer;
     }
 
-    .image-container, .text-container {
-      text-align: center;
-      padding: 20px 10%;
-    }
+.image-container, .text-container {
+  text-align: center;
+  padding: 10px 10%; /* Reduced padding to 10px */
+}
 
-    .text-container h2 {
-      font-size: 1.8rem;
-      margin: 10px 0;
-    }
+.text-container h2 {
+  font-size: 1.8rem;
+  margin: 5px 0; /* Reduced margin to 5px */
 
     .claim-button {
       display: inline-block;
