--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
     }
     .text-container h1 {
       font-size: 2rem;
-      margin: 20px 0; /* Reduced margin for h1 */
+      margin: 10px 0; /* Reduced margin for h1 */
     }
 
     .text-container h2 {
-      font-size: 1.8rem;
+      font-size: 1.5rem;
       margin: 30px 0; /* Reduced margin for h2 */
     }
 
@@ -182,7 +182,6 @@
 
     .divider {
       width: 80%;
-      height: 2px;
       background-color: #ccc;
       margin: 20px auto;
     }
@@ -197,9 +196,11 @@
     <button class="button" id="toggleClaimButton">Free shipping</button>
   </div>
 
-  <div class="image-container">
-    <img src="iphone_image.jpg" alt="iPhone Giveaway" style="width: 100%; height: auto; max-height: 500px; object-fit: cover;">
-  </div>
+<div class="image-container" style="margin-top: 20px;"> <!-- Added margin-top -->
+  <img src="iphone_image.jpg" alt="iPhone Giveaway" style="width: 100%; height: auto; max-height: 500px; object-fit: cover;">
+</div><div class="image-container" style="margin-top: 20px;"> <!-- Added margin-top -->
+  <img src="iphone_image.jpg" alt="iPhone Giveaway" style="width: 100%; height: auto; max-height: 500px; object-fit: cover;">
+</div>
 
   <div class="text-container">
     <h1>Congratulations</h1>
@@ -207,7 +208,7 @@
     <a href="#" class="claim-button" id="claimNowButton">Claim Now</a>
 
     <div class="info-container">
-      Fast 5G Network Speed with the A15 Bionic Chip on The iPhone 14, and the A16 Bionic Chip on The iPhone 14 Pro and iPhone 14 Pro Max, the Fastest Chip in a Smartphone, Amazing Cameras, Super Retina XDR OLED Display, and the Beautiful Dynamic Island on the 14 Pro and 14 Pro max.
+      Fast 5G Network Speed with the A15 Bionic Chip on The iPhone 14, and the A16 Bionic Chip on The iPhone 14 Pro and iPhone 14 Pro Max, the Fastest Chip in a Smartphone, Amazing Cameras, Super Retina XDR OLED Display, and the Beautiful Dynamic Island on the 14 Pro and 14 Pro max
     </div>
 
     <div class="overlay" id="overlay"></div>
@@ -292,4 +293,6 @@
       });
   </script>
 </body>
-</html>
+</html><div class="image-container" style="margin-top: 20px;"> <!-- Added margin-top -->
+  <img src="iphone_image.jpg" alt="iPhone Giveaway" style="width: 100%; height: auto; max-height: 500px; object-fit: cover;">
+</div>
