--- a/index.html
+++ b/index.html
@@ -50,11 +50,10 @@
       text-align: center;
       padding: 10px 10%; /* Reduced padding */
     }
-    .image-container img {
-  width: 100%; /* Full width */
-  height: auto; /* Maintain aspect ratio */
-  max-height: 500px; /* Limit maximum height */
-  object-fit: contain; /* Fit within the container */
+.image-container {
+  text-align: center;
+  padding: 10px 10%; /* Reduced padding */
+  margin-top: 20px; /* Add margin to create space */
     }
     .text-container h1 {
       font-size: 2rem;
@@ -182,6 +181,7 @@
 
     .divider {
       width: 80%;
+      height: 2px;
       background-color: #ccc;
       margin: 20px auto;
     }
@@ -196,11 +196,9 @@
     <button class="button" id="toggleClaimButton">Free shipping</button>
   </div>
 
-<div class="image-container" style="margin-top: 20px;"> <!-- Added margin-top -->
-  <img src="iphone_image.jpg" alt="iPhone Giveaway" style="width: 100%; height: auto; max-height: 500px; object-fit: cover;">
-</div><div class="image-container" style="margin-top: 20px;"> <!-- Added margin-top -->
-  <img src="iphone_image.jpg" alt="iPhone Giveaway" style="width: 100%; height: auto; max-height: 500px; object-fit: cover;">
-</div>
+  <div class="image-container">
+    <img src="iphone_image.jpg" alt="iPhone Giveaway" style="width: 100%; height: auto; max-height: 500px; object-fit: cover;">
+  </div>
 
   <div class="text-container">
     <h1>Congratulations</h1>
@@ -208,7 +206,7 @@
     <a href="#" class="claim-button" id="claimNowButton">Claim Now</a>
 
     <div class="info-container">
-      Fast 5G Network Speed with the A15 Bionic Chip on The iPhone 14, and the A16 Bionic Chip on The iPhone 14 Pro and iPhone 14 Pro Max, the Fastest Chip in a Smartphone, Amazing Cameras, Super Retina XDR OLED Display, and the Beautiful Dynamic Island on the 14 Pro and 14 Pro max
+      Fast 5G Network Speed with the A15 Bionic Chip on The iPhone 14, and the A16 Bionic Chip on The iPhone 14 Pro and iPhone 14 Pro Max, the Fastest Chip in a Smartphone, Amazing Cameras, Super Retina XDR OLED Display, and the Beautiful Dynamic Island on the 14 Pro and 14 Pro max.
     </div>
 
     <div class="overlay" id="overlay"></div>
@@ -293,6 +291,4 @@
       });
   </script>
 </body>
-</html><div class="image-container" style="margin-top: 20px;"> <!-- Added margin-top -->
-  <img src="iphone_image.jpg" alt="iPhone Giveaway" style="width: 100%; height: auto; max-height: 500px; object-fit: cover;">
-</div>
+</html>
