--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     .image-container, .text-container {
       text-align: center;
-      padding: 10px 10%; /* Reduced padding */
+      padding:5px 10%; /* Reduced padding */
     }
 .image-container {
   text-align: center;
@@ -202,11 +202,11 @@
 
   <div class="text-container">
     <h1>Congratulations</h1>
-    <h2>Stand a Chance to Win a Brand New Free iPhone</h2>
+    <h2>Here's your chance to win a brand new free iPhone</h2>
     <a href="#" class="claim-button" id="claimNowButton">Claim Now</a>
 
     <div class="info-container">
-      Fast 5G Network Speed with the A15 Bionic Chip on The iPhone 14, and the A16 Bionic Chip on The iPhone 14 Pro and iPhone 14 Pro Max, the Fastest Chip in a Smartphone, Amazing Cameras, Super Retina XDR OLED Display, and the Beautiful Dynamic Island on the 14 Pro and 14 Pro max.
+      Fast 5G Network Speed with the A15 Bionic Chip on The iPhone 14, and the A16 Bionic Chip on The iPhone 14 Pro and iPhone 14 Pro Max, the Fastest Chip in a Smartphone, Amazing Cameras, Super Retina XDR OLED Display, and the Beautiful Dynamic Island on the 14 Pro and 14 Pro max
     </div>
 
     <div class="overlay" id="overlay"></div>
